<resources>
    <string name="app_name">TodoAppBox</string>
    <string name="edit_todo">Edit todo</string>
    <string name="floating_add">AddItemButton</string>
    <string name="setup_obs">Configurar OBS</string>
    <string name="button_delete">button delete</string>
    <string name="button_edit">button edit</string>
    <string name="text">Text</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="new_todo">New todo</string>
    <string name="view_todo">View todo</string>
</resources>