<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTodoItem">

    <TextView
        android:id="@+id/new_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_todo"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@+id/new_todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="?attr/colorOnSecondary"
        android:layout_marginHorizontal="24dp"/>

    <TextView
        android:id="@+id/txt_text"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:text="@string/text"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/green"
        android:drawableEnd="@drawable/ic_baseline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_text"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>